--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -95,7 +95,6 @@ deny 108.181.27.205;
 deny 108.181.69.243;
 deny 108.59.13.243;
 deny 108.61.189.136;
-deny 109.107.190.171;
 deny 109.169.33.163;
 deny 109.201.133.100;
 deny 109.69.67.17;
@@ -113,7 +112,6 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
-deny 118.163.74.160;
 deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
@@ -215,7 +213,6 @@ deny 178.218.144.18;
 deny 178.218.144.51;
 deny 178.218.144.99;
 deny 178.236.247.122;
-deny 178.31.159.152;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -304,14 +301,6 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
-deny 185.220.100.244;
-deny 185.220.100.245;
-deny 185.220.100.246;
-deny 185.220.100.247;
-deny 185.220.100.248;
-deny 185.220.100.249;
-deny 185.220.100.250;
-deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -623,6 +612,8 @@ deny 192.46.227.185;
 deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.149.129.22;
+deny 193.149.129.4;
 deny 193.149.187.112;
 deny 193.163.170.149;
 deny 193.168.141.245;
@@ -813,11 +804,10 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
-deny 2001:bc8:634:2177::1;
 deny 2001:bc8:700:9212::1;
+deny 2001:bc8:710:3672:dc00:ff:fe42:19db;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 202.182.99.129;
@@ -857,7 +847,6 @@ deny 212.73.134.204;
 deny 212.95.50.77;
 deny 213.136.84.104;
 deny 213.232.235.83;
-deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
@@ -1246,6 +1235,7 @@ deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
+deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
@@ -1254,7 +1244,6 @@ deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
-deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
@@ -1283,10 +1272,7 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1294,11 +1280,6 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1503,7 +1484,6 @@ deny 2a12:5940:4462::2;
 deny 2a12:5940:463b::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:53f7::2;
-deny 2a12:5940:7515::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
@@ -1517,10 +1497,9 @@ deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
-deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
-deny 34.231.214.120;
+deny 3.220.236.255;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.188.156;
@@ -1635,12 +1614,12 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.126;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
+deny 5.255.111.64;
 deny 5.255.115.42;
 deny 5.255.115.58;
 deny 5.255.117.56;
@@ -1698,6 +1677,7 @@ deny 77.232.143.255;
 deny 77.48.28.193;
 deny 77.48.28.204;
 deny 77.48.28.236;
+deny 77.48.28.239;
 deny 77.81.247.72;
 deny 77.91.85.147;
 deny 77.91.86.95;
@@ -1731,7 +1711,6 @@ deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
-deny 84.247.165.51;
 deny 84.247.165.52;
 deny 84.247.165.53;
 deny 84.54.51.61;
@@ -1805,6 +1784,7 @@ deny 93.95.230.165;
 deny 93.95.230.54;
 deny 93.99.104.128;
 deny 93.99.104.18;
+deny 93.99.104.194;
 deny 94.102.51.15;
 deny 94.140.115.63;
 deny 94.142.241.194;
