--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -95,6 +94,7 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.59.13.243;
 allow 108.61.189.136;
+allow 109.107.190.171;
 allow 109.169.33.163;
 allow 109.201.133.100;
 allow 109.69.67.17;
@@ -112,6 +112,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -133,7 +134,6 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.57;
 allow 144.172.73.11;
-allow 144.172.73.13;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -212,7 +212,9 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.99;
+allow 178.236.237.23;
 allow 178.236.247.122;
+allow 178.31.159.152;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -301,6 +303,14 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -804,6 +814,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -835,7 +846,6 @@ allow 208.109.36.224;
 allow 209.141.40.44;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -847,6 +857,7 @@ allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
 allow 213.232.235.83;
+allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -995,7 +1006,6 @@ allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 allow 2605:6400:20:104e::2;
-allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1148,7 +1158,6 @@ allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2095:2624::1;
@@ -1244,6 +1253,7 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
@@ -1272,7 +1282,10 @@ allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1280,6 +1293,11 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1484,6 +1502,7 @@ allow 2a12:5940:4462::2;
 allow 2a12:5940:463b::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:53f7::2;
+allow 2a12:5940:7515::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
@@ -1495,11 +1514,10 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
-allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.220.236.255;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.188.156;
@@ -1509,6 +1527,8 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
+allow 38.97.116.244;
+allow 44.218.153.121;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1577,14 +1597,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.183.219.136;
-allow 46.183.219.141;
-allow 46.183.219.142;
-allow 46.183.219.143;
-allow 46.183.219.145;
-allow 46.183.222.188;
-allow 46.183.222.189;
-allow 46.183.222.190;
 allow 46.226.161.151;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1660,6 +1672,7 @@ allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
+allow 65.109.30.253;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
@@ -1711,6 +1724,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.51;
 allow 84.247.165.52;
 allow 84.247.165.53;
 allow 84.54.51.61;
