--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,6 +112,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -169,7 +170,6 @@ deny 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 deny 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 deny 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 deny 2605:6400:20:104e::2;
-deny 2605:6400:20:170c::1;
 deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
 deny 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -321,7 +321,6 @@ deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
-deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c206:2095:2624::1;
@@ -417,6 +416,7 @@ deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
+deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
@@ -445,7 +445,10 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -453,6 +456,11 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -657,6 +665,7 @@ deny 2a12:5940:4462::2;
 deny 2a12:5940:463b::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:53f7::2;
+deny 2a12:5940:7515::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
@@ -668,5 +677,4 @@ deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
-deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
