Update lists at 20240305-1800

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -678,4 +678,5 @@ deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
+deny 2a12:8641:3:38::;
 deny 2a12:a800:2:1:45:138:16:203;
