--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -135,6 +134,7 @@ allow 144.172.118.4;
 allow 144.172.118.41;
 allow 144.172.118.57;
 allow 144.172.73.11;
+allow 144.172.73.13;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -227,7 +227,6 @@ allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
-allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -1519,6 +1518,7 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
+allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
@@ -1533,6 +1533,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
+allow 44.222.24.43;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1629,7 +1630,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1653,7 +1653,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.7.123.5;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
