--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -678,4 +678,5 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
+allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
