--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -171,6 +172,8 @@ allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
+allow 168.100.9.100;
+allow 168.100.9.97;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -226,7 +229,6 @@ allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
-allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -728,6 +730,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1511,6 +1514,7 @@ allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
+allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
@@ -1532,7 +1536,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.213.246.155;
+allow 44.221.240.74;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1685,6 +1689,7 @@ allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
+allow 77.232.143.248;
 allow 77.232.143.255;
 allow 77.48.28.193;
 allow 77.48.28.204;
@@ -1787,6 +1792,7 @@ allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.237.227;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
