--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,6 +113,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -168,6 +169,7 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 167.71.6.109;
 allow 167.99.208.41;
 allow 168.100.9.100;
 allow 168.100.9.97;
@@ -817,6 +819,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1185,6 +1188,7 @@ allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
+allow 2a03:4000:40:14b:d816:17ff:feae:5598;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1521,7 +1525,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.234.20.32;
+allow 3.232.152.32;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.188.156;
@@ -1628,6 +1632,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 5.252.224.53;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1635,6 +1640,7 @@ allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
 allow 5.255.103.235;
+allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.115.42;
 allow 5.255.115.58;
