--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -114,7 +115,7 @@ allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 13.201.165.5;
+allow 130.204.161.3;
 allow 135.125.205.25;
 allow 135.125.55.237;
 allow 136.244.111.163;
@@ -165,7 +166,6 @@ allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 165.73.242.163;
-allow 166.70.207.2;
 allow 167.71.6.109;
 allow 167.99.208.41;
 allow 168.100.9.100;
@@ -552,7 +552,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.229.53;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -634,7 +633,6 @@ allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
-allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
@@ -817,6 +815,7 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 201.137.249.0;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -948,7 +947,6 @@ allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
-allow 2406:da1a:622:1000:243e:4d7c:f2b3:9f32;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
@@ -1185,6 +1183,7 @@ allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
+allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -1488,7 +1487,6 @@ allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
-allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
@@ -1516,8 +1514,10 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 34.202.50.8;
 allow 35.0.127.52;
 allow 37.1.201.144;
+allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.187.5.192;
 allow 37.228.129.128;
@@ -1526,7 +1526,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
-allow 44.198.139.52;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1796,6 +1795,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.112.22;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
