--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -114,7 +115,7 @@ set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
-set_real_ip_from 13.201.165.5;
+set_real_ip_from 130.204.161.3;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 135.125.55.237;
 set_real_ip_from 136.244.111.163;
@@ -165,7 +166,6 @@ set_real_ip_from 163.172.213.212;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 165.73.242.163;
-set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.71.6.109;
 set_real_ip_from 167.99.208.41;
 set_real_ip_from 168.100.9.100;
@@ -552,7 +552,6 @@ set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
-set_real_ip_from 189.147.229.53;
 set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
@@ -634,7 +633,6 @@ set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
-set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.91;
@@ -817,6 +815,7 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bc8:710:3672:dc00:ff:fe42:19db;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+set_real_ip_from 201.137.249.0;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 202.69.76.36;
@@ -948,7 +947,6 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2406:da1a:622:1000:243e:4d7c:f2b3:9f32;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.43;
@@ -1185,6 +1183,7 @@ set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 set_real_ip_from 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 set_real_ip_from 2a03:4000:62:8:c855:23ff:fef6:50ee;
+set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -1488,7 +1487,6 @@ set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
-set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:8a40:f313::29;
@@ -1516,8 +1514,10 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.202.50.8;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
+set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
@@ -1526,7 +1526,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.198.139.52;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1796,6 +1795,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
