--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -316,18 +317,7 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
-deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
-deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
-deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.129;
@@ -479,10 +469,6 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
-deny 185.220.101.96;
-deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -849,7 +835,6 @@ deny 209.141.59.116;
 deny 209.141.62.71;
 deny 212.21.66.6;
 deny 212.69.167.80;
-deny 212.73.134.204;
 deny 212.95.50.77;
 deny 213.136.84.104;
 deny 213.252.140.118;
@@ -1126,6 +1111,7 @@ deny 2a00:1169:117:5510::;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:1d1f:b701;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -1446,21 +1432,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1522,10 +1493,11 @@ deny 37.120.188.156;
 deny 37.187.5.192;
 deny 37.228.129.128;
 deny 37.228.129.63;
+deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
-deny 38.242.239.62;
 deny 38.97.116.244;
+deny 44.199.26.51;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.135.132.20;
@@ -1643,7 +1615,6 @@ deny 5.255.99.5;
 deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
-deny 54.205.105.149;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
