--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -316,18 +317,7 @@ set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
-set_real_ip_from 185.220.101.100;
-set_real_ip_from 185.220.101.101;
-set_real_ip_from 185.220.101.102;
-set_real_ip_from 185.220.101.103;
-set_real_ip_from 185.220.101.104;
-set_real_ip_from 185.220.101.105;
-set_real_ip_from 185.220.101.106;
-set_real_ip_from 185.220.101.107;
-set_real_ip_from 185.220.101.108;
-set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
-set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
@@ -479,10 +469,6 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
-set_real_ip_from 185.220.101.96;
-set_real_ip_from 185.220.101.97;
-set_real_ip_from 185.220.101.98;
-set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
@@ -849,7 +835,6 @@ set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
-set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.252.140.118;
@@ -1126,6 +1111,7 @@ set_real_ip_from 2a00:1169:117:5510::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
+set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:1d1f:b701;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
@@ -1446,21 +1432,6 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
-set_real_ip_from 2a0b:f4c2:4::100;
-set_real_ip_from 2a0b:f4c2:4::101;
-set_real_ip_from 2a0b:f4c2:4::102;
-set_real_ip_from 2a0b:f4c2:4::103;
-set_real_ip_from 2a0b:f4c2:4::104;
-set_real_ip_from 2a0b:f4c2:4::105;
-set_real_ip_from 2a0b:f4c2:4::106;
-set_real_ip_from 2a0b:f4c2:4::107;
-set_real_ip_from 2a0b:f4c2:4::108;
-set_real_ip_from 2a0b:f4c2:4::109;
-set_real_ip_from 2a0b:f4c2:4::110;
-set_real_ip_from 2a0b:f4c2:4::96;
-set_real_ip_from 2a0b:f4c2:4::97;
-set_real_ip_from 2a0b:f4c2:4::98;
-set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -1522,10 +1493,11 @@ set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.63;
+set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.199.26.51;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1643,7 +1615,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.205.105.149;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
