--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -110,7 +109,6 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
-set_real_ip_from 114.199.75.111;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -317,7 +315,18 @@ set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
+set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
+set_real_ip_from 185.220.101.102;
+set_real_ip_from 185.220.101.103;
+set_real_ip_from 185.220.101.104;
+set_real_ip_from 185.220.101.105;
+set_real_ip_from 185.220.101.106;
+set_real_ip_from 185.220.101.107;
+set_real_ip_from 185.220.101.108;
+set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
+set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
@@ -469,6 +478,10 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
+set_real_ip_from 185.220.101.96;
+set_real_ip_from 185.220.101.97;
+set_real_ip_from 185.220.101.98;
+set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
@@ -835,6 +848,7 @@ set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
+set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.252.140.118;
@@ -930,6 +944,7 @@ set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
+set_real_ip_from 2400:8907::f03c:94ff:fe2d:80f4;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2.58.56.220;
@@ -1201,6 +1216,7 @@ set_real_ip_from 2a03:94e0:ffff:185:243:218:0:35;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:41;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:46;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:89;
+set_real_ip_from 2a03:b0c0:2:d0::1768:8001;
 set_real_ip_from 2a03:b0c0:2:d0::f1b:2001;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
@@ -1432,6 +1448,21 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -1486,18 +1517,17 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.238.55.101;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
-set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.199.26.51;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1544,6 +1574,7 @@ set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.79.177.21;
+set_real_ip_from 45.79.236.149;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
@@ -1589,7 +1620,6 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.252.224.53;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1631,13 +1661,13 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
+set_real_ip_from 64.226.85.129;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 65.109.30.253;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 70.53.133.193;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
@@ -1648,9 +1678,7 @@ set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.243;
 set_real_ip_from 77.232.143.248;
 set_real_ip_from 77.232.143.255;
-set_real_ip_from 77.48.28.193;
 set_real_ip_from 77.48.28.204;
-set_real_ip_from 77.48.28.236;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
@@ -1729,6 +1757,7 @@ set_real_ip_from 89.58.41.251;
 set_real_ip_from 89.58.63.200;
 set_real_ip_from 91.103.253.141;
 set_real_ip_from 91.132.144.59;
+set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
