--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -120,6 +120,7 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bc8:710:3672:dc00:ff:fe42:19db;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+deny 2400:8907::f03c:94ff:fe2d:80f4;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
@@ -386,6 +387,7 @@ deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:94e0:ffff:185:243:218:0:41;
 deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
+deny 2a03:b0c0:2:d0::1768:8001;
 deny 2a03:b0c0:2:d0::f1b:2001;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
@@ -617,6 +619,21 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::104;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::106;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::110;
+deny 2a0b:f4c2:4::96;
+deny 2a0b:f4c2:4::97;
+deny 2a0b:f4c2:4::98;
+deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
