--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -120,6 +120,7 @@ set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bc8:710:3672:dc00:ff:fe42:19db;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+set_real_ip_from 2400:8907::f03c:94ff:fe2d:80f4;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2600:3c00:e000:4ee::1;
@@ -386,6 +387,7 @@ set_real_ip_from 2a03:94e0:ffff:185:243:218:0:35;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:41;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:46;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:89;
+set_real_ip_from 2a03:b0c0:2:d0::1768:8001;
 set_real_ip_from 2a03:b0c0:2:d0::f1b:2001;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
@@ -617,6 +619,21 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
