--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,6 +109,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 114.199.75.111;
 allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -128,7 +129,6 @@ allow 143.110.156.176;
 allow 143.42.110.237;
 allow 143.42.199.223;
 allow 144.172.118.4;
-allow 144.172.118.41;
 allow 144.172.118.57;
 allow 144.172.73.11;
 allow 144.172.73.6;
@@ -212,6 +212,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 178.31.34.5;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -445,7 +446,6 @@ allow 185.220.101.58;
 allow 185.220.101.59;
 allow 185.220.101.6;
 allow 185.220.101.60;
-allow 185.220.101.61;
 allow 185.220.101.62;
 allow 185.220.101.63;
 allow 185.220.101.64;
@@ -724,10 +724,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:678:b30:3::4;
-allow 2001:678:e3c::a;
-allow 2001:678:e3c::b;
-allow 2001:678:e3c::c;
-allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -866,7 +862,6 @@ allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.133;
 allow 23.129.64.134;
-allow 23.129.64.135;
 allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
@@ -938,6 +933,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
@@ -957,6 +953,7 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
+allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1067,7 +1064,6 @@ allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
-allow 2605:6400:d814:5125::;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
@@ -1080,7 +1076,6 @@ allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
 allow 2620:18c:0:192::134;
-allow 2620:18c:0:192::135;
 allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
@@ -1123,7 +1118,6 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:117:5510::;
-allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
@@ -1411,7 +1405,6 @@ allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
-allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
@@ -1517,12 +1510,13 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.238.55.101;
+allow 34.226.37.34;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.187.5.192;
+allow 37.228.129.128;
 allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
@@ -1558,10 +1552,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.151.122.34;
-allow 45.151.167.10;
-allow 45.151.167.11;
-allow 45.151.167.12;
-allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
@@ -1589,7 +1579,6 @@ allow 45.95.169.184;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.195.119.34;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1651,7 +1640,6 @@ allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
 allow 5.42.80.235;
-allow 5.42.82.98;
 allow 54.36.101.21;
 allow 5.45.102.93;
 allow 5.45.104.176;
@@ -1668,6 +1656,7 @@ allow 65.109.30.253;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
+allow 70.53.133.193;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
@@ -1788,7 +1777,6 @@ allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.230.54;
-allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
