--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -30,10 +30,6 @@ deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
 deny 2001:678:b30:3::4;
-deny 2001:678:e3c::a;
-deny 2001:678:e3c::b;
-deny 2001:678:e3c::c;
-deny 2001:678:e3c::d;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
@@ -129,6 +125,7 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
+deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
@@ -239,7 +236,6 @@ deny 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
 deny 2605:6400:30:fdd8::2;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
-deny 2605:6400:d814:5125::;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
@@ -252,7 +248,6 @@ deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
 deny 2620:18c:0:192::134;
-deny 2620:18c:0:192::135;
 deny 2620:18c:0:192::136;
 deny 2620:18c:0:192::137;
 deny 2620:18c:0:192::138;
@@ -294,7 +289,6 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:110:2990::;
 deny 2a00:1169:112:de0::;
 deny 2a00:1169:117:5510::;
-deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
@@ -582,7 +576,6 @@ deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
-deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
