--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -212,7 +213,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.99;
 allow 178.236.247.122;
-allow 178.31.34.5;
+allow 178.31.23.168;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -443,9 +444,9 @@ allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
-allow 185.220.101.59;
 allow 185.220.101.6;
 allow 185.220.101.60;
+allow 185.220.101.61;
 allow 185.220.101.62;
 allow 185.220.101.63;
 allow 185.220.101.64;
@@ -550,6 +551,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 189.147.187.7;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -810,7 +812,6 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bc8:710:3672:dc00:ff:fe42:19db;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 201.137.249.0;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.69.76.36;
@@ -862,6 +863,7 @@ allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.133;
 allow 23.129.64.134;
+allow 23.129.64.135;
 allow 23.129.64.136;
 allow 23.129.64.137;
 allow 23.129.64.138;
@@ -933,7 +935,6 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
@@ -953,7 +954,6 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
-allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1076,6 +1076,7 @@ allow 2620:18c:0:192::131;
 allow 2620:18c:0:192::132;
 allow 2620:18c:0:192::133;
 allow 2620:18c:0:192::134;
+allow 2620:18c:0:192::135;
 allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
@@ -1118,6 +1119,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
 allow 2a00:1169:112:de0::;
 allow 2a00:1169:117:5510::;
+allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
 allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
@@ -1142,7 +1144,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1402,9 +1403,9 @@ allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
-allow 2a0b:f4c2:2::59;
 allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
+allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
 allow 2a0b:f4c2::27;
@@ -1510,7 +1511,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.226.37.34;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1606,6 +1606,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.207.105.56;
 allow 5.252.224.53;
 allow 5.255.100.126;
 allow 5.255.100.219;
@@ -1663,7 +1664,6 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
-allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
 allow 77.232.143.255;
@@ -1709,7 +1709,6 @@ allow 84.247.165.53;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
-allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.209.176.103;
 allow 85.215.76.62;
@@ -1809,5 +1808,4 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
