--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -6,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -212,7 +213,7 @@ deny 178.218.144.18;
 deny 178.218.144.51;
 deny 178.218.144.99;
 deny 178.236.247.122;
-deny 178.31.34.5;
+deny 178.31.23.168;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -443,9 +444,9 @@ deny 185.220.101.55;
 deny 185.220.101.56;
 deny 185.220.101.57;
 deny 185.220.101.58;
-deny 185.220.101.59;
 deny 185.220.101.6;
 deny 185.220.101.60;
+deny 185.220.101.61;
 deny 185.220.101.62;
 deny 185.220.101.63;
 deny 185.220.101.64;
@@ -550,6 +551,7 @@ deny 188.214.104.21;
 deny 188.68.41.191;
 deny 188.68.49.235;
 deny 188.68.52.231;
+deny 189.147.187.7;
 deny 190.103.179.98;
 deny 190.120.229.98;
 deny 190.211.254.97;
@@ -810,7 +812,6 @@ deny 2001:bc8:700:9212::1;
 deny 2001:bc8:710:3672:dc00:ff:fe42:19db;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-deny 201.137.249.0;
 deny 202.182.99.129;
 deny 202.61.226.98;
 deny 202.69.76.36;
@@ -862,6 +863,7 @@ deny 23.129.64.131;
 deny 23.129.64.132;
 deny 23.129.64.133;
 deny 23.129.64.134;
+deny 23.129.64.135;
 deny 23.129.64.136;
 deny 23.129.64.137;
 deny 23.129.64.138;
@@ -933,7 +935,6 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
-deny 23.155.24.6;
 deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
@@ -953,7 +954,6 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
-deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
@@ -1076,6 +1076,7 @@ deny 2620:18c:0:192::131;
 deny 2620:18c:0:192::132;
 deny 2620:18c:0:192::133;
 deny 2620:18c:0:192::134;
+deny 2620:18c:0:192::135;
 deny 2620:18c:0:192::136;
 deny 2620:18c:0:192::137;
 deny 2620:18c:0:192::138;
@@ -1118,6 +1119,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:110:2990::;
 deny 2a00:1169:112:de0::;
 deny 2a00:1169:117:5510::;
+deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
@@ -1142,7 +1144,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
-deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1402,9 +1403,9 @@ deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
-deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
+deny 2a0b:f4c2:2::61;
 deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
@@ -1510,7 +1511,6 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
-deny 34.226.37.34;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1606,6 +1606,7 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
+deny 52.207.105.56;
 deny 5.252.224.53;
 deny 5.255.100.126;
 deny 5.255.100.219;
@@ -1663,7 +1664,6 @@ deny 72.167.47.69;
 deny 74.207.248.172;
 deny 74.82.47.194;
 deny 77.105.146.42;
-deny 77.220.196.253;
 deny 77.232.143.243;
 deny 77.232.143.248;
 deny 77.232.143.255;
@@ -1709,7 +1709,6 @@ deny 84.247.165.53;
 deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
-deny 85.204.116.211;
 deny 85.204.116.88;
 deny 85.209.176.103;
 deny 85.215.76.62;
@@ -1809,5 +1808,4 @@ deny 95.211.210.103;
 deny 95.211.244.28;
 deny 95.211.7.148;
 deny 96.27.198.133;
-deny 96.42.26.63;
 deny 96.66.15.152;
